--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "mapbox-gl": "^2.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
