--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "jwt-decode": "^3.1.2",
     "mapbox-gl": "^2.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
